# fsharp-monorepo

./: .gitignore  README.md  WORKSPACE  paket.dependencies
.github/workflows/: build.yml
app/: BUILD.bazel
lib/: BUILD.bazel
tests/: BUILD.bazel  Program.fs  test.sh
